[project]
name = "planner"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LiaoYu", email = "54996753+LiuLiaoYu@users.noreply.github.com"},
]
dependencies = [
    "psutil>=6.0.0",
    "PySide6>=6.8.0",
    "pywin32>=308",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "matplotlib>=3.9.3",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python src/main.py"
# test-map-vis = "python src/map_vis.py"
# test-server = "python tests/test_server.py"

[tool.pdm.dev-dependencies]
jupyter = [
    "ipykernel>=6.29.5",
]
